--- a/package.json
+++ b/package.json
@@ -1,15 +1,45 @@
 {
-  "name": "create-frontend",
-  "description": "frontend for fhotofarm",
-  "version": "0.0.0",
-  "author": "(Ashish Maurya) <62279600+ashishmaurya-crypto@users.noreply.github.com>",
-  "bin": "src/cli.js",
-  "files": [
-    "src",
-    "templates"
-  ],
+  "name": "fhotofarm-frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "create-create-app": "^7.3.0"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.6",
+    "redux": "^4.2.1",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
+    "scss": "^0.2.4",
+    "web-vitals": "^2.1.4"
   },
-  "license": "MIT"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
